syntax = "proto3";

package auth_v1;

import "google/protobuf/empty.proto";
import "auth_user_roles.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/waryataw/auth/pkg/authv1";

service AuthService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  Role role = 5;
}

message CreateUserResponse {
  int64 id = 1;
}

message GetUserRequest {
  oneof query {
    int64 id = 1;
    string name = 2;
  }
}
message GetUserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
}

message DeleteUserRequest {
  int64 id = 1;
}